--- a/Store/WebContent/WEB-INF/web.xml
+++ b/Store/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
      <resource-ref>
     	<res-ref-name>jdbc/store</res-ref-name>
-    	<res-type>java.sql.DataSource</res-type>
+    	<res-type>javax.sql.DataSource</res-type>
     	<res-auth>Container</res-auth>
     </resource-ref>
     <servlet>
