--- a/Store/.settings/org.eclipse.core.resources.prefs
+++ b/Store/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//WebContent/css=UTF-8
 encoding//WebContent/css/logandreg.css=UTF-8
+encoding//src/entity/Brand.java=UTF-8
+encoding//src/entity/BrandList.java=UTF-8
 encoding/WebContent=UTF-8
